Fix some flickering

--- a/components/loading/styles.module.css
+++ b/components/loading/styles.module.css
@@ -3,7 +3,7 @@
 
     }
     to {
-        transform: rotate(360deg);
+        transform: rotate(-360deg);
     }
 }
 
